--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5045,6 +5045,7 @@ input[type="button"].btn-block {
   background-clip: border-box;
   border: 1px solid #eaf0fc;
   border-radius: 0.2rem;
+  height: 450px;
 }
 
 .card > hr {
@@ -11558,7 +11559,13 @@ pre .code {
     transition: none;
   }
 }
+.blog_img{
+  height: 200px;
+}
 
+.service__img{
+  height: 250px;
+}
 .custom-navbar .navbar-toggler {
   border: 1px solid rgba(234, 240, 252, 0.2);
   height: 55px;
